Fix align

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
     width: 600px;
     left: calc(50% - 300px);
     bottom: 80px;
-    align: center;
+    text-align: center;
     color: white;
     background-color: #2de2e6;
     box-shadow: 0px 0px 10px #f706cf;
